src/objects/Zuora_HPM_Settings__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <fields>
        <fullName>Api_Security_Key__c</fullName>
        <label>Api Security Key</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Id__c</fullName>
        <label>Id</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Tenant_Id__c</fullName>
        <label>Tenant Id</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Zuora_URL__c</fullName>
        <label>Zuora URL</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <label>Zuora HPM Settings</label>
</CustomObject>